--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -11,10 +11,27 @@ jobs:
     - uses: actions/checkout@v1
     - name: Build and tag image
       run: |
-        docker build -t "docker.pkg.github.com/tafy2392/python-auth-package/munya:latest" .
+        docker build -t "docker.pkg.github.com/$GITHUB_REPOSITORY/munya:latest" .
     - name: Docker login
       run: docker login docker.pkg.github.com -u $GITHUB_ACTOR -p $GITHUB_TOKEN
       env:
         GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
     - name: Publish to GPR
-      run: docker push "docker.pkg.github.com/tafy2392/python-auth-package/munya:latest"
+      run: docker push "docker.pkg.github.com/$GITHUB_REPOSITORY/munya:latest"
+  BuildFromGPR:
+    needs: build_docker_image
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v1
+    - name: Docker login
+      run: docker login docker.pkg.github.com -u $GITHUB_ACTOR -p $GITHUB_TOKEN
+      env:
+          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+    - name: Pull Docker image
+      run: |
+        docker pull "docker.pkg.github.com/$GITHUB_REPOSITORY/munya:latest"
+    - name: Run image
+      run: docker run -it -d --name builder -v $GITHUB_WORKSPACE:/workspace -w /workspace docker.pkg.github.com/$GITHUB_REPOSITORY/munya:latest
+
+
+
