--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -12,5 +12,5 @@ jobs:
         run: |
           echo "Pull request's base branch is: ${BASE_BRANCH}"
         env:
-          BASE_BRANCH: ${{ github.base_ref }}
+          BASE_BRANCH: ${{ github.head_ref }}
         if: github.event_name == 'pull_request'
