--- a/.github/workflows/pull-request.yaml
+++ b/.github/workflows/pull-request.yaml
@@ -10,7 +10,31 @@ jobs:
       - uses: actions/checkout@v2
       - name: Branch name
         run: |
-          echo "Pull request's base branch is: ${BASE_BRANCH}"
+          echo "Pull request's base branch is: ${GITHUB.HEAD_REF}"
         env:
-          BASE_BRANCH: ${{ github.head_ref }}
+          GITHUB.HEAD_REF: ${{ github.head_ref }}
         if: github.event_name == 'pull_request'
+      - name: Build and tag image
+        run: |
+          docker build -t "docker.pkg.github.com/$GITHUB_REPOSITORY/munya:${GITHUB.HEAD_REF}" .
+      - name: Docker login
+        run: docker login docker.pkg.github.com -u $GITHUB_ACTOR -p $GITHUB_TOKEN
+        env:
+          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+      - name: Publish to GPR
+        run: docker push "docker.pkg.github.com/$GITHUB_REPOSITORY/munya:${GITHUB.HEAD_REF}"
+  BuildFromGPR:
+    needs: RegistryPush
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v1
+    - name: Docker login
+      run: docker login docker.pkg.github.com -u $GITHUB_ACTOR -p $GITHUB_TOKEN
+      env:
+        GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+    - name: Pull Docker image
+      run: |
+        docker pull "docker.pkg.github.com/$GITHUB_REPOSITORY/munya:${GITHUB.HEAD_REF}"
+    - name: Run image
+      run: docker run -it -d --name builder -v $GITHUB_WORKSPACE:/workspace -w /workspace docker.pkg.github.com/$GITHUB_REPOSITORY/munya:${GITHUB.HEAD_REF}
+
