--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   RegistryPush:
-    runs-on: ubuntu-$TAG
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
     - name: Determine if its a push or pull request
