--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -14,7 +14,7 @@ jobs:
     - uses: actions/checkout@v1
     - name: Determine if its a push or pull request
       run: |
-        if [ ${{ github.event_name }} == 'pull_request' ]; echo '::set-env name=TAG::${{ github.head_ref }}' ;
+        if [ github.event_name  == 'pull_request' ]; echo '::set-env name=TAG::${{ github.head_ref }}' ;
         else
           echo '::set-env name=TAG::latest'
         fi
@@ -29,7 +29,7 @@ jobs:
       run: docker push "docker.pkg.github.com/$GITHUB_REPOSITORY/munya:$TAG"
   BuildFromGPR:
     needs: RegistryPush
-    runs-on: ubuntu-$TAG
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
     - name: Determine if its a push or pull request
