--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -14,7 +14,7 @@ jobs:
     - uses: actions/checkout@v1
     - name: Determine if its a push or pull request
       run: |
-        if [ github.event_name  == 'pull_request' ]; echo '::set-env name=TAG::${{ github.head_ref }}' ;
+        if [ github.event_name  == 'pull_request' ]; then echo '::set-env name=TAG::${{ github.head_ref }}' ;
         else
           echo '::set-env name=TAG::latest'
         fi
@@ -34,7 +34,7 @@ jobs:
     - uses: actions/checkout@v1
     - name: Determine if its a push or pull request
       run: |
-        if [ ${{ github.event_name }} == 'pull_request' ]; echo '::set-env name=TAG::${{ github.head_ref }}' ;
+        if [ ${{ github.event_name }} == 'pull_request' ]; then echo '::set-env name=TAG::${{ github.head_ref }}' ;
         else
           echo '::set-env name=TAG::latest'
         fi
