--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -13,14 +13,15 @@ jobs:
     steps:
     - uses: actions/checkout@v1
     - name: Determine if its a push or pull request
+      id: tag
       run: |
-        if [ github.event_name  == 'pull_request' ]; then echo "::set-env name=TAG::${{ github.head_ref }}" ;
+        if [ github.event_name  == 'pull_request' ]; then echo "::set-output name=tag::${{ github.head_ref }}" ;
         else
-          echo '::set-env name=TAG::latest'
+          echo '::set-output name=tag::latest'
         fi
     - name: Build and tag image
       run: |
-        docker build -t "docker.pkg.github.com/$GITHUB_REPOSITORY/munya:$TAG"
+        docker build -t "docker.pkg.github.com/$GITHUB_REPOSITORY/munya:${{ steps.tag.outputs.tag }}"
     - name: Docker login
       run: docker login docker.pkg.github.com -u $GITHUB_ACTOR -p $GITHUB_TOKEN
       env:
