--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -27,7 +27,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
     - name: Publish to GPR
-      run: docker push "docker.pkg.github.com/$GITHUB_REPOSITORY/munya:"$TAG
+      run: docker push "docker.pkg.github.com/$GITHUB_REPOSITORY/munya:${{ steps.tag.outputs.tag }}"
   BuildFromGPR:
     needs: RegistryPush
     runs-on: ubuntu-latest
@@ -35,9 +35,9 @@ jobs:
     - uses: actions/checkout@v1
     - name: Determine if its a push or pull request
       run: |
-        if [ ${{ github.event_name }} == 'pull_request' ]; then echo '::set-env name=TAG::${{ github.head_ref }}' ;
+        if [ github.event_name  == 'pull_request' ]; then echo "::set-output name=tag::${{ github.head_ref }}" ;
         else
-          echo '::set-env name=TAG::latest'
+          echo '::set-output name=tag::latest'
         fi
     - name: Docker login
       run: docker login docker.pkg.github.com -u $GITHUB_ACTOR -p $GITHUB_TOKEN
@@ -45,9 +45,9 @@ jobs:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
     - name: Pull Docker image
       run: |
-        docker pull "docker.pkg.github.com/$GITHUB_REPOSITORY/munya:"$TAG
+        docker pull "docker.pkg.github.com/$GITHUB_REPOSITORY/munya:${{ steps.tag.outputs.tag }}"
     - name: Run image
-      run: docker run -it -d --name builder -v $GITHUB_WORKSPACE:/workspace -w /workspace docker.pkg.github.com/$GITHUB_REPOSITORY/munya:$TAG
+      run: docker run -it -d --name builder -v $GITHUB_WORKSPACE:/workspace -w /workspace docker.pkg.github.com/$GITHUB_REPOSITORY/munya:${{ steps.tag.outputs.tag }}"
 
 
 
