--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -36,7 +36,7 @@ jobs:
     - name: Determine if its a push or pull request
       id: tag
       run: |
-        if [ github.event_name  == 'pull_request' ]; then echo "::set-output name=tag::${{ github.head_ref }}" ;
+        if [ ${{github.event_name}}  == 'pull_request' ]; then echo "::set-output name=tag::${{ github.head_ref }}" ;
         else
           echo '::set-output name=tag::latest'
         fi
