--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -3,6 +3,8 @@ on:
   push:
     branches:
       - master
+    tags:
+      - 'v*'
   pull_request:
     branches:
       - master
@@ -10,48 +12,37 @@ on:
 jobs:
   RegistryPush:
     runs-on: ubuntu-latest
+    outputs:
+      image-tag: ${{ steps.tag.outputs.tag }}
     steps:
-    - uses: actions/checkout@v2.3.1
     - name: Determine if its a push or pull request
       id: tag
       run: |
-        if [ ${{github.event_name }} == 'pull_request' ]
-          then echo "::set-output name=tag::${{ github.head_ref }}";
+        if [ ${{ github.event_name }} == 'pull_request' ]; then
+          # Pull requests are tagged with the name of their branch.
+          echo "::set-output name=tag::${{ github.head_ref }}";
         else
-          echo '::set-output name=tag::latest'
+          ref=${{ github.ref }}
+          if [ "${ref}" == 'refs/heads/master' ]; then
+            # Commits to master are tagged as latest.
+            echo "::set-output name=tag::latest"
+          else
+            # Because we only trigger push builds for master and version tags,
+            # anything that's left must be a version tag.
+            echo "::set-output name=tag::${ref#refs/tags/}"
+          fi
         fi
-    - name: Build and tag image
-      run: |
-        docker build -t "docker.pkg.github.com/$GITHUB_REPOSITORY/marathon-acme-trio:${{ steps.tag.outputs.tag }}" .
-    - name: Docker login
-      run: docker login docker.pkg.github.com -u $GITHUB_ACTOR -p $GITHUB_TOKEN
-      env:
-        GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
-    - name: Publish to GPR
-      run: docker push "docker.pkg.github.com/$GITHUB_REPOSITORY/marathon-acme-trio:${{ steps.tag.outputs.tag }}"
-  BuildFromGPR:
-    needs: RegistryPush
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v2.3.1
-    - name: Determine if its a push or pull request
-      id: tag
-      run: |
-        if [ ${{github.event_name}}  == 'pull_request' ]; then echo "::set-output name=tag::${{ github.head_ref }}" ;
-        else
-          echo '::set-output name=tag::latest'
-        fi
-    - name: Docker login
-      run: docker login docker.pkg.github.com -u $GITHUB_ACTOR -p $GITHUB_TOKEN
-      env:
-          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
-    - name: Pull Docker image
-      run: |
-        docker pull "docker.pkg.github.com/$GITHUB_REPOSITORY/marathon-acme-trio:${{ steps.tag.outputs.tag }}"
-    - name: Run image
-      run: |
-        docker run -it -d --name builder -v $GITHUB_WORKSPACE:/workspace \
-        -w /workspace docker.pkg.github.com/$GITHUB_REPOSITORY/marathon-acme-trio:${{ steps.tag.outputs.tag }}
+    - uses: actions/checkout@v2
+      name: Check out code
+    - uses: mr-smithers-excellent/docker-build-push@v3
+      name: Build & push Docker image
+      with:
+        image: mara
+        tag: latest
+        registry: docker.io
+      dockerfile: Dockerfile
+      username: ${{ secrets.DOCKER_USERNAME }}
+      password: ${{ secrets.DOCKER_PASSWORD }}
 
 
 
