--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -14,10 +14,14 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       image-tag: ${{ steps.tag.outputs.tag }}
+      repo: ${{ steps.tag.outputs.repo }}
     steps:
+    - uses: actions/checkout@v2
+      name: Check out code
     - name: Determine if its a push or pull request
       id: tag
       run: |
+        echo "::set-output repo=tafymunya/mara"
         if [ ${{ github.event_name }} == 'pull_request' ]; then
           # Pull requests are tagged with the name of their branch.
           echo "::set-output name=tag::${{ github.head_ref }}";
@@ -32,13 +36,11 @@ jobs:
             echo "::set-output name=tag::${ref#refs/tags/}"
           fi
         fi
-    - uses: actions/checkout@v2
-      name: Check out code
     - uses: mr-smithers-excellent/docker-build-push@v3
       name: Build & push Docker image
       with:
-        image: tafymunya/mara
-        tag: latest
+        image: ${{ steps.tag.outputs.repo }}
+        tag: ${{ steps.tag.outputs.tag }}
         registry: docker.io
         dockerfile: Dockerfile
         username: ${{ secrets.DOCKER_USERNAME }}
