--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -14,14 +14,16 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       image-tag: ${{ steps.tag.outputs.tag }}
-      repo: ${{ steps.tag.outputs.repo }}
+      repo: ${{ steps.repo.outputs.repo }}
     steps:
     - uses: actions/checkout@v2
       name: Check out code
+    - name: Set Repository name
+      id: repo
+      run: echo "::set-output repo=tafymunya/mara"
     - name: Determine if its a push or pull request
       id: tag
       run: |
-        echo "::set-output repo=tafymunya/mara"
         if [ ${{ github.event_name }} == 'pull_request' ]; then
           # Pull requests are tagged with the name of their branch.
           echo "::set-output name=tag::${{ github.head_ref }}";
@@ -39,8 +41,8 @@ jobs:
     - uses: mr-smithers-excellent/docker-build-push@v3
       name: Build & push Docker image
       with:
-        image: ${{ steps.tag.outputs.repo }}
-        tag: ${{ steps.tag.outputs.tag }}
+        image: ${{ steps.repo.outputs.repo }}
+        tag: ${{${{ steps.repo.outputs.repo }}
         registry: docker.io
         dockerfile: Dockerfile
         username: ${{ secrets.DOCKER_USERNAME }}
