--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -3,35 +3,58 @@ on:
   push:
     branches:
       - master
+    tags:
+      - 'v*'
+  pull_request:
+    branches:
+      - master
 
 jobs:
   RegistryPush:
     runs-on: ubuntu-latest
+    outputs:
+      image-tag: ${{ steps.tag.outputs.tag }}
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v2
+    - name: Determine if its a push or pull request
+      id: tag
+      run: |
+        if [ ${{ github.event_name }} == 'pull_request' ]; then
+          # Pull requests are tagged with the name of their branch.
+          echo "::set-output name=tag::${{ github.head_ref }}";
+        else
+          ref=${{ github.ref }}
+          if [ "${ref}" == 'refs/heads/master' ]; then
+            # Commits to master are tagged as latest.
+            echo "::set-output name=tag::latest"
+          else
+            # Because we only trigger push builds for master and version tags,
+            # anything that's left must be a version tag.
+            echo "::set-output name=tag::${ref#refs/tags/}"
+          fi
+        fi
     - name: Build and tag image
       run: |
-        docker build -t "docker.pkg.github.com/$GITHUB_REPOSITORY/munya:latest" .
+        docker build -t "docker.pkg.github.com/$GITHUB_REPOSITORY/marathon-acme-trio:${{ steps.tag.outputs.tag }}" .
     - name: Docker login
       run: docker login docker.pkg.github.com -u $GITHUB_ACTOR -p $GITHUB_TOKEN
       env:
         GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
     - name: Publish to GPR
-      run: docker push "docker.pkg.github.com/$GITHUB_REPOSITORY/munya:latest"
-  BuildFromGPR:
+      run: docker push "docker.pkg.github.com/$GITHUB_REPOSITORY/marathon-acme-trio:${{ steps.tag.outputs.tag }}"
+  pullFromGPR:
     needs: RegistryPush
-    runs-on: ubuntu-latest
+    runs-on: self-hosted
     steps:
-    - uses: actions/checkout@v1
+    - uses: actions/checkout@v2
     - name: Docker login
       run: docker login docker.pkg.github.com -u $GITHUB_ACTOR -p $GITHUB_TOKEN
       env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
     - name: Pull Docker image
       run: |
-        docker pull "docker.pkg.github.com/$GITHUB_REPOSITORY/munya:latest"
-    - name: Run image
-      run: docker run -it -d --name builder -v $GITHUB_WORKSPACE:/workspace -w /workspace docker.pkg.github.com/$GITHUB_REPOSITORY/munya:latest
-
-
-
+        docker pull "docker.pkg.github.com/$GITHUB_REPOSITORY/marathon-acme-trio:${{ needs.RegistryPush.outputs.image-tag }}"
+        docker tag marathon-acme-trio:${{ needs.RegistryPush.outputs.image-tag }} \
+        tafymunya/mara:${{ needs.RegistryPush.outputs.image-tag }}
+        docker login docker.pkg.github.com -u tafymunya -p Tafy2392@
+        docker push tafymunya/mara:${{ needs.RegistryPush.outputs.image-tag }}
