--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -54,11 +54,11 @@ jobs:
     - name: Pull Docker image
       run: |
         docker pull "docker.pkg.github.com/$GITHUB_REPOSITORY/marathon-acme-trio:${{ needs.RegistryPush.outputs.image-tag }}"
-        docker tag marathon-acme-trio:${{ needs.RegistryPush.outputs.image-tag }} \
-        tafymunya/mara:${{ needs.RegistryPush.outputs.image-tag }}
+        docker tag "docker.pkg.github.com/$GITHUB_REPOSITORY/marathon-acme-trio:${{ needs.RegistryPush.outputs.image-tag }}" \
+        "tafymunya/mara:${{ needs.RegistryPush.outputs.image-tag }}"
         docker login docker.pkg.github.com -u tafymunya -p Tafy2392@
         docker push tafymunya/mara:${{ needs.RegistryPush.outputs.image-tag }}
-        docker pull "docker.pkg.github.com/$GITHUB_REPOSITORY/marathon-acme-trio:${{ steps.tag.outputs.tag }}"
+
 
 
 
