--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -56,11 +56,8 @@ jobs:
         docker pull "docker.pkg.github.com/$GITHUB_REPOSITORY/marathon-acme-trio:${{ needs.RegistryPush.outputs.image-tag }}"
         echo docker.pkg.github.com/$GITHUB_REPOSITORY/marathon-acme-trio:${{ needs.RegistryPush.outputs.image-tag }}
         echo $(docker images)
-        docker login docker.pkg.github.com --username=tafymunya --password=Tafy2392@
+        echo "Tafy2392@" | docker login -u "tafymunya" --password-stdin
         docker tag docker.pkg.github.com/$GITHUB_REPOSITORY/marathon-acme-trio:${{ needs.RegistryPush.outputs.image-tag }} \
         tafymunya/mara:${{ needs.RegistryPush.outputs.image-tag }}
         docker push tafymunya/mara:${{ needs.RegistryPush.outputs.image-tag }}
-
-
-
 
